should not create non-project project instances